--- a/common mistakes/mistake1.html
+++ b/common mistakes/mistake1.html
@@ -60,5 +60,50 @@
         </tbody>
       </table>
     </center>
+        <center>
+      <h3>session 2</h3>
+      <table>
+          <tr>
+            <td>woman</td>
+            <td>women</td>
+          </tr>
+          <tr>
+            <td>if I was wearing cloths</td>
+            <td>???????????????????????</td>
+          </tr>
+          <tr>
+            <td>make attention</td>
+            <td>pay attention</td>
+          </tr>
+          <tr>
+            <td>I think & in my option</td>
+            <td>??????????????????????</td>
+          </tr>
+          <tr>
+            <td>these pieces of paper</td>
+            <td>?????????????????????</td>
+          </tr>
+          <tr>
+            <td>freedom</td>
+            <td>pro</td>
+          </tr>
+          <tr>
+            <td>cloths</td>
+            <td>pro</td>
+          </tr>
+          <tr>
+            <td>written</td>
+            <td>pro</td>
+          </tr>
+          <tr>
+            <td>of</td>
+            <td>pro</td>
+          </tr>
+          <tr>
+            <td>cellphone</td>
+            <td>pro</td>
+          </tr>
+      </table>
+    </center>
   </body>
 </html>
