--- a/common mistakes/mistake1.html
+++ b/common mistakes/mistake1.html
@@ -76,7 +76,7 @@
             <td>pay attention</td>
           </tr>
           <tr>
-            <td>I think & in my option</td>
+            <td>I think & in my opinion</td>
             <td>??????????????????????</td>
           </tr>
           <tr>
@@ -88,7 +88,7 @@
             <td>pro</td>
           </tr>
           <tr>
-            <td>cloths</td>
+            <td>clothes</td>
             <td>pro</td>
           </tr>
           <tr>
