--- a/common mistakes/mistake1.html
+++ b/common mistakes/mistake1.html
@@ -105,5 +105,42 @@
           </tr>
       </table>
     </center>
+    <center>
+      <h3>session 3</h3>
+      <table>
+          <tr>
+            <td>there are recent news</td>
+            <td>there is recent news</td>
+          </tr>
+          <tr>
+            <td>no one approve</td>
+            <td>no one approves</td>
+          </tr>
+          <tr>
+            <td>people wants</td>
+            <td>people want</td>
+          </tr>
+          <tr>
+            <td>and etc.</td>
+            <td>and stuff(informal), and so on(formal), and so forth(formal)</td>
+          </tr>
+          <tr>
+            <td>alot of books</td>
+            <td>?????????????</td>
+          </tr>
+          <tr>
+            <td>homeworks</td>
+            <td>homework</td>
+          </tr>
+          <tr>
+            <td>cellphone</td>
+            <td>pro</td>
+          </tr>
+          <tr>
+            <td>characteristics</td>
+            <td>pro</td>
+          </tr>
+      </table>
+    </center>
   </body>
 </html>
