--- a/common mistakes/mistake1.html
+++ b/common mistakes/mistake1.html
@@ -142,5 +142,26 @@
           </tr>
       </table>
     </center>
+    <center>
+      <h3>found by me</h3>
+      <table>
+        <tr>
+          <td>I will intend to English class</td>
+          <td>I will intend to <span class="underline">join</span> English class</td>
+        </tr>
+        <tr>
+          <td>The building has <span class="underline">an</span> easy access to transportation</td>
+          <td>The building has easy access ...</td>
+        </tr>
+        <tr>
+          <td>I have short time</td>
+          <td>I'm short on/of time OR I have limited time.</td>
+        </tr>
+        <tr>
+          <td>growing children</td>
+          <td>raising/parenting children</td>
+        </tr>
+      </table>
+    </center>
   </body>
 </html>
