--- a/dictation/dictation1.html
+++ b/dictation/dictation1.html
@@ -31,5 +31,26 @@
           </tr>
       </table>
     </center>
+    <center>
+      <h3>found by me</h3>
+      <table>
+          <tr>
+            <td class="wrong">limmited</td>
+            <td class="correct">limited</td>
+          </tr>
+          <tr>
+            <td class="wrong">knowldge</td>
+            <td class="correct">knowledge</td>
+          </tr>
+          <tr>
+            <td class="wrong"></td>
+            <td class="correct"></td>
+          </tr>
+          <tr>
+            <td class="wrong"></td>
+            <td class="correct"></td>
+          </tr>
+      </table>
+    </center>
   </body>
 </html>
