--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p>Choose the part that you want to check.</p>
       <a href="common mistakes/mistake1.html"><h3 class="choose">common mistakes</h3></a>
       <a href="dictation/dictation1.html"><h3 class="choose">dictation problems</h3></a>
-      <a href="voices/voice1.html"><h3 class="choose">voices</h3></a>
+      <a href="meanings/meanings.html"><h3 class="choose">meanings</h3></a>
       <a href="writings/writing1.html"><h3>writings</h3></a>
     </center>
   </body>
