--- a/dictation/dictation1.html
+++ b/dictation/dictation1.html
@@ -43,6 +43,18 @@
             <td class="correct">knowledge</td>
           </tr>
           <tr>
+            <td class="wrong">regullar</td>
+            <td class="correct">regular</td>
+          </tr>
+          <tr>
+            <td class="wrong"></td>
+            <td class="correct">assessed</td>
+          </tr>
+          <tr>
+            <td class="wrong">reaserch</td>
+            <td class="correct">research</td>
+          </tr>
+          <tr>
             <td class="wrong"></td>
             <td class="correct"></td>
           </tr>
