--- a/common mistakes/mistake1.html
+++ b/common mistakes/mistake1.html
@@ -161,6 +161,10 @@
           <td>growing children</td>
           <td>raising/parenting children</td>
         </tr>
+        <tr>
+          <td>Chilren's eating patterns mimic their parent's eating patternts</td>
+          <td>Chilren's eating patterns mimic those of their patternts</td>
+        </tr>
       </table>
     </center>
   </body>
