--- a/common mistakes/mistake1.html
+++ b/common mistakes/mistake1.html
@@ -167,5 +167,26 @@
         </tr>
       </table>
     </center>
+    <center>
+      <h3>session 4</h3>
+      <table>
+        <tr>
+          <td>He do</td>
+          <td>He does</td>
+        </tr>
+        <tr>
+          <td>Me my self</td>
+          <td>It's informl ????????????</td>
+        </tr>
+        <tr>
+          <td>split off</td>
+          <td>split up</td>
+        </tr>
+        <tr>
+          <td>in depend's of</td>
+          <td>in depend's on</td>
+        </tr>
+      </table>
+    </center>
   </body>
 </html>
