--- a/common mistakes/mistake1.html
+++ b/common mistakes/mistake1.html
@@ -188,5 +188,26 @@
         </tr>
       </table>
     </center>
+    <center>
+      <h3>session 5</h3>
+      <table>
+        <tr>
+          <td>puted</td>
+          <td>put</td>
+        </tr>
+        <tr>
+          <td>affect</td>
+          <td>pronunciation</td>
+        </tr>
+        <tr>
+          <td>There are some effects on</td>
+          <td>?????????</td>
+        </tr>
+        <tr>
+          <td>It affects on many people job</td>
+          <td>It affects  many peoples job</td>
+        </tr>
+      </table>
+    </center>
   </body>
 </html>
