--- a/dictation/dictation1.html
+++ b/dictation/dictation1.html
@@ -55,6 +55,24 @@
             <td class="correct">research</td>
           </tr>
           <tr>
+      </table>
+    </center>
+    <center>
+      <h3>found by me 2</h3>
+      <table>
+          <tr>
+            <td class="wrong">pronounciation</td>
+            <td class="correct">pronunciation</td>
+          </tr>
+          <tr>
+            <td class="wrong">exersise</td>
+            <td class="correct">exercise</td>
+          </tr>
+          <tr>
+            <td class="wrong">feul</td>
+            <td class="correct">fuel</td>
+          </tr>
+          <tr>
             <td class="wrong"></td>
             <td class="correct"></td>
           </tr>
