--- a/dictation/dictation1.html
+++ b/dictation/dictation1.html
@@ -73,12 +73,28 @@
             <td class="correct">fuel</td>
           </tr>
           <tr>
-            <td class="wrong"></td>
-            <td class="correct"></td>
+            <td class="wrong">acuse</td>
+            <td class="correct">accuse</td>
           </tr>
           <tr>
-            <td class="wrong"></td>
-            <td class="correct"></td>
+            <td class="wrong">acomodation</td>
+            <td class="correct">accommodation</td>
+          </tr>
+          <tr>
+            <td class="wrong">acuare</td>
+            <td class="correct">acquire</td>
+          </tr>
+          <tr>
+            <td class="wrong">adiquat</td>
+            <td class="correct">adequate</td>
+          </tr>
+          <tr>
+            <td class="wrong">activiest</td>
+            <td class="correct">activist</td>
+          </tr>
+          <tr>
+            <td class="wrong">actualy</td>
+            <td class="correct">actually</td>
           </tr>
       </table>
     </center>
